Modified typing error in tags

--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -1,13 +1,10 @@
 ---
 layout: post
-title: 알고리즘 문제풀이 3 - 조건문 만들기
-description: "알고리즘 문제풀이 3 - 조건문 만들기"
+title: 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
+description: "변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유"
 tags:
   - javascript
-  - algorithm
-  - tryhelloworld
-  - function
-  - Level 1
+  - 
 comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/126'
 ---
