--- a/_posts/2017-05-18-algorithm1.md
+++ b/_posts/2017-05-18-algorithm1.md
@@ -3,7 +3,7 @@ layout: post
 title: 알고리즘 문제풀이 1 - 자바스크립트 내장 메서드 사용하여 함수 짜기
 description: "알고리즘 문제풀이 1 - 자바스크립트 내장 메서드 사용하여 함수 짜기"
 tags:
-  - javascritp
+  - javascript
   - algorithm
   - tryhelloworld
   - function
