--- a/_posts/2017-05-19-algorithm2.md
+++ b/_posts/2017-05-19-algorithm2.md
@@ -3,7 +3,7 @@ layout: post
 title: 알고리즘 문제풀이 2 - 배열 내부에 있는 숫자의 평균값 구하기, Array.prototype.reduce()
 description: "알고리즘 문제풀이 2 - 자바스크립트의 변수, Array.prototype.reduce()"
 tags:
-  - javascritp
+  - javascript
   - algorithm
   - tryhelloworld
   - function
