--- a/_posts/2017-05-23-algorithm4.md
+++ b/_posts/2017-05-23-algorithm4.md
@@ -3,7 +3,7 @@ layout: post
 title: 알고리즘 문제풀이 3 - 조건문 만들기
 description: "알고리즘 문제풀이 3 - 조건문 만들기"
 tags:
-  - javascritp
+  - javascript
   - algorithm
   - tryhelloworld
   - function
