Add post about javascript type coersion and changed small styling part, pagination

--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -1,57 +1,55 @@
 ---
 layout: post
-title: 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
+title: [Javascript] 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
 description: "변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유"
 tags:
   - javascript
-  - 
+  - type coercion
+  - weak typing
+  - javascript operators
 comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/126'
 ---
 
-## [문제](http://tryhelloworld.co.kr/challenge_codes/122)
+## 자바스크립트의 타입 강제와 약한 형식화, 자바스크립트의 암묵적 강제 형변환 Javascript type coercion and weak typing
 
-## 조건에 따라 다른 값을 출력하기
+### 1. 자바스크립트 연산자의 종류 Javascript Operators
 
-evenOrOdd 메소드는 int형 num을 매개변수로 받습니다. num이 짝수일 경우 "Even"을 반환하고 홀수인 경우 "Odd"를 반환하도록 evenOrOdd에 코드를 작성해 보세요. num은 0이상의 정수이며, num이 음수인 경우는 없습니다.
+어떤 코드가 수행될 지 평가, 판단하기 위해서는 조건문(if, if-else, switch)과 루프문(for, while)을 사용한다. 이러한 구문들은 연산자를 사용해 연산대상(operands)을 비교하여 true/false 값, 즉 Boolean 형식의 데이터를 가져와 의사결정을 한다. 이때 사용하는 연산자 세 종류가 있다.
 
-## 나의 풀이 방법
+1. 동등비교연산자 `==, !=` 
+2. 일치비교연산자 `===, !==` 
+3. 관계비교연산자 `<, =<, >, =>` 
+4. 논리연산자 `&&, ||, !`
 
-```javascript
-function evenOrOdd(num) {
-  var result = ''
-  if( num %2==0){
-  	return "Even";
-  }
-  else{
-  	return "Odd";
-  }
-}
-// 아래는 테스트로 출력해 보기 위한 코드입니다.
-console.log("결과 : " + evenOrOdd(2));
-console.log("결과 : " + evenOrOdd(3));
-```
+이 중 동등비교연산자와 일치비교연산자 간의 차이를 살펴보자.
 
-## 참고 - 삼항식으로 표현하는 법에 익숙해지자!
+-  `==` , `!=` : 값이 동일한지 다른 지 여부를 비교
+-  `===` , `!==` : 같은 데이터타입인지 다른 데이터타입인지 비교
 
-```javascript
-function evenOrOdd(num) {
- return (num % 2)? "Odd":"Even";
-}
-```
+즉, 일치비교연산자는 연산대상 간의 타입까지 비교한다.
+예를 들어,
 
-## 정리
+ `'3' !== 3` 의 경우, '3'은 문자열이고 3은 숫자이므로 결과는 true다.
 
-* 
+ `'3' != 3` 의 경우, 결과는 false 다. 왜냐하면 자바스크립트는 타입 강제를 통해 `'3'` 을 숫자 `3` 으로 바꾸기 때문이다.
 
-------
+---
 
-## 다른 사람들의 풀이
+## 정리 : 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
 
+1. 자바스크립트는 **타입 강제** 라는 속성을 가진다.
+2. 타입강제는 데이터 타입을 변환해서라도 작업을 완료하려는 특성이다.
 
-------
+	`ex) `'1' > 0` —> 문자열 `'1'` 이 숫자 `1` 로 변환되어 처리된다.`
 
-## 참고
+3. 이렇게 타입강제로 인해 값의 데이터 타입이 바뀔 수 있으므로 자바스크립트는 **약한 형식화** 를 사용하며, 모든 자바스크립트의 값들은 `true/false` 의 불리언 값이 될 수 있다.
 
+## 추가 : 자바스크립트의 모든 값들은 true/false 값으로 취급될 수 있다.
 
-------
+// 이어서
+
+---
+
+- 참고 : <자바스크립트 & 제이쿼리>, 존 두캣
+- [더 알아보기](https://www.slideshare.net/senxation/ss-16791882)
