Modified sign letter which makes title view error

--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [Javascript] 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
+title: Javascript | 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
 description: "변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유"
 tags:
   - javascript
