Changed post title

--- a/_posts/2017-05-23-algorithm4.md
+++ b/_posts/2017-05-23-algorithm4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 알고리즘 문제풀이 3 - 조건문 만들기
-description: "알고리즘 문제풀이 3 - 조건문 만들기"
+title: 알고리즘 문제풀이 4 - 정수 제곱근 판별하기
+description: "알고리즘 문제풀이 4 - 정수 제곱근 판별하기"
 tags:
   - javascript
   - algorithm
