Test including  image asset

--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -11,9 +11,9 @@ comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/126'
 ---
 
-#### 자바스크립트의 타입 강제와 약한 형식화, 자바스크립트의 암묵적 강제 형변환 Javascript type coercion and weak typing
+![image](../../assets/images/images.png)
 
-### 1. 자바스크립트 연산자의 종류 Javascript Operators
+## 1. 자바스크립트 연산자의 종류 Javascript Operators
 
 어떤 코드가 수행될 지 평가, 판단하기 위해서는 조건문(if, if-else, switch)과 루프문(for, while)을 사용한다. 이러한 구문들은 연산자를 사용해 연산대상(operands)을 비교하여 true/false 값, 즉 Boolean 형식의 데이터를 가져와 의사결정을 한다. 이때 사용하는 연산자 세 종류가 있다.
 
@@ -34,20 +34,42 @@ comments: true
 
  `'3' != 3` 의 경우, 결과는 false 다. 왜냐하면 자바스크립트는 타입 강제를 통해 `'3'` 을 숫자 `3` 으로 바꾸기 때문이다.
 
----
+## 2. 자바스크립트의 모든 값들은 true/false 값으로 취급될 수 있다?
+
+* false로 취급될 수 있는 값들
+
+> false(boolean), 숫자 0, NaN(var score = 10/'num';), 빈 값(var score = ''), 아직 값을 대입하지 않은 변수(var score;)
+
+이를 제외한 거의 모든 값들이 true로 취급 가능하다
+
+* true로 취급될 수 있는 값들
+
+> true(boolean), 0이 아닌 다른 숫자, 내용을 가진 문자열, 계산된 숫자(var score = 10/5), 문자열로 표현된 true(var score = 'true';), 문자열로 표현된 숫자 0(var score = '0';) 문자열로 표현된 false(var score = 'false';)
+
+값이 설정되어 있는 변수, 같은 형끼리 연산한 0 이외의 숫자들은 모두 참이다. true로 취급될 수 있는 값들은 숫자 1로도 취급가능하다. 객체나 배열에 인스턴스가 존재한다면 이 역시 true다.
+
+## 3.  true값과 true로 취급할 수 있는 값은 서로 다르다.
+
+객체나 배열 인스턴스가 true로 취급될 수는 있지만, 이 값은 불리언 값의 true와는 **다른** 값이다.
+null과 undefined 값 역시 false로 취급할 수 있지만 실제로는 `그 어떤 값과도 동일하지 않는 고유한 값`이라고 봐야 한다. NaN은 자기 자신과도 동일하지 않다(NaN은 정의되지 않은 숫자이기 때문에 두 NaN은 서로 같지 않다.).
+
+|표현식|결과|표현식|결과|표현식|결과|
+|:--|--:|:--|--:|:--|--:|
+|(false == 0)|true|(undefined == null)|true|(NaN == null)|false|
+|(false === 0)|false|(null == false)|false|(NaN == NaN)|false|
+|(false == '')|true|(undefined == false)|false|
+|(false === '')|false|(null == 0)|false|
+|(0 == '')|true|(undefined == 0)|false|
+|(0 === '')|false|(undefined === null)|false|
 
 ## 정리 : 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
 
 1. 자바스크립트는 **타입 강제** 라는 속성을 가진다.
-2. 타입강제는 데이터 타입을 변환해서라도 작업을 완료하려는 특성이다.
+2. 타입강제는 `데이터 타입을 변환해서라도 작업을 완료하려는 특성`이다.
 
-	`ex) `'1' > 0` —> 문자열 `'1'` 이 숫자 `1` 로 변환되어 처리된다.`
+	ex) `'1' > 0` —> 문자열 `'1'` 이 숫자 `1` 로 변환되어 처리된다.
 
-3. 이렇게 타입강제로 인해 값의 데이터 타입이 바뀔 수 있으므로 자바스크립트는 **약한 형식화** 를 사용하며, 모든 자바스크립트의 값들은 `true/false` 의 불리언 값이 될 수 있다.
-
-## 추가 : 자바스크립트의 모든 값들은 true/false 값으로 취급될 수 있다.
-
-// 이어서
+3. 이렇게 <mark>타입강제로 인해 값의 데이터 타입이 바뀔 수 있으므로 자바스크립트는 약한 형식화를 사용</mark>하며, 모든 자바스크립트의 값들은 `true/false` 의 불리언 값이 될 수 있다.
 
 ---
 
