--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -2,6 +2,7 @@
 layout: post
 title: Javascript | 변수 값 비교시 동등비교연산자 대신 일치비교연산자를 써야 하는 이유
 description: "자바스크립트의 타입 강제와 약한 형식화, 자바스크립트의 암묵적 강제 형변환 Javascript type coercion and weak typing"
+image: ../../assets/images/images.png
 tags:
   - javascript
   - type coercion
