Test thumbnail image when share post on sns

--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -12,7 +12,7 @@ comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/126'
 ---
 
-![image](../../assets/images/images.png)
+![image](../../assets/images/js_coecion.png)
 
 ## 1. 자바스크립트 연산자의 종류 Javascript Operators
 
