--- a/_posts/2017-05-15-js1.md
+++ b/_posts/2017-05-15-js1.md
@@ -14,6 +14,12 @@ comments: true
 
 ![image](../../assets/images/images.png)
 
+POINT
+: 1. 자바스크립트는 **타입 강제** 라는 속성을 가진다.
+: 2. 타입강제는 `데이터 타입을 변환해서라도 작업을 완료하려는 특성`이다.
+
+---
+
 ## 1. 자바스크립트 연산자의 종류 Javascript Operators
 
 어떤 코드가 수행될 지 평가, 판단하기 위해서는 조건문(if, if-else, switch)과 루프문(for, while)을 사용한다. 이러한 구문들은 연산자를 사용해 연산대상(operands)을 비교하여 true/false 값, 즉 Boolean 형식의 데이터를 가져와 의사결정을 한다. 이때 사용하는 연산자 세 종류가 있다.
