--- a/_posts/2017-05-29-html-css.md
+++ b/_posts/2017-05-29-html-css.md
@@ -1,3 +1,22 @@
+---
+layout: post
+title: HTML/CSS | 태그와 속성 다시보기 - 1
+description: "jekyll 템플릿 테마를 제공하는 html5up.net의 Forty 템플릿의 CSS/SASS 파일을 분석하며 HTML5와 CSS(Scss) 복습"
+tags:
+  - html
+  - css
+  - html5up
+  - vertical-align
+  - media query
+  - line-height
+  - <pre> tag
+  - psuedo element
+  - ::before, ::after 
+  - border-collapse
+comments: true
+# link: 'http://tryhelloworld.co.kr/challenge_codes/120'
+---
+
 # html5up.net의 Forty 템플릿 공부
 
 jekyll 템플릿 테마를 제공하는 html5up.net의 Forty 템플릿의 CSS/SASS 파일을 분석하며 HTML5와 CSS(Scss) 복습
