Updated HTML/CSS study

--- a/_posts/2017-05-29-html-css.md
+++ b/_posts/2017-05-29-html-css.md
@@ -9,7 +9,7 @@ tags:
   - vertical-align
   - media query
   - line-height
-  - <pre> tag
+  - pre tag
   - psuedo element
   - ::before, ::after 
   - border-collapse
@@ -36,7 +36,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 ```
 
-`vertical-align`
+vertical-align
 : 인라인 요소나 테이블의 cell box에 사용된다. 수직 정렬을 조정한다.
 : 기본값은 `baseline`이다.
 : 값의 종류로는 문자열로 된 키워드나 숫자와 함께 길이 단위, 퍼센트 단위 등을 사용한다.
@@ -69,14 +69,14 @@ vertical-align: unset;
 
 // 사진/그림 첨부
 
-### 2. 애매한 <artical> 태그
+### 2. 애매한 artical 태그
 
 ```css
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 ```
-`<article>`
+article
 : 개별적으로 분리되어도 독립적인 하나의 컨텐츠가 될 수 있는 요소. 가장 쉬운 예로 블로그의 개별 포스트 같은 것.
 : 그래서 보통 제목요소(h1~h6)을 자식으로 포함할 수 있다.
 
@@ -102,7 +102,7 @@ body {
 	}
 ```
 
-`line-height`
+line-height
 : 줄 간격 조정 속성
 : 단위(em, % 등)를 가진 줄 간격은 자식요소까지 상속되는 문제를 가지기 때문에 정수 값만 적용하는 게 낫다.
 : 위의 문제가 생기는 이유는 `line-height`요소가 **글자 크기에 비례**하기 때문이다. 
@@ -119,11 +119,11 @@ ol, ul {
 }
 ```
 
-`list-style`
+list-style
 : list-style은 리스트 앞에 붙는 구분점의 모양과 위치를 설정하기 위한 세가지 속성으로 구성된다.
-    : `list-style-type`: disc, circle, square, ...
-    : `list-style-image`: url('image.gif')
-    : `list-style-position`: inside, outside
+    * `list-style-type`: disc, circle, square, ...
+    * `list-style-image`: url('image.gif')
+    * `list-style-position`: inside, outside
 : 이러한 속성들을 모두 초기화 하기 위해 늘 리스트 태그 초기화를 `list-style: none`으로 해준다.
 
 ### 5. 생소한 `blockquote`, `q`
@@ -134,7 +134,7 @@ blockquote, q {
 }
 ```
 
-`blockquote`
+blockquote
 : 인용된 정보의 원본 문서나 메시지를 가리키는 url 주소 등을 나타낸다.
 
 ```html
@@ -155,7 +155,7 @@ blockquote:before, blockquote:after, q:before, q:after {
 }
 ```
 
-가상요소 `::before`, `::after`
+::before, ::after
 : <mark>DOM에는 추가되지 않고</mark> CSS 상에서만 추가되는 **인라인 요소**
 : `::before`는 선택된 엘리먼트의 첫번째 자식요소로, `::after`는 마지막 자식요소로 추가된다.
 : 인라인 요소이므로 글자 앞뒤에 문장부호를 집어넣거나 테두리, 선 삽입 등 주변을 꾸밀 때도 자주 사용한다.
@@ -176,6 +176,8 @@ table {
 
 * [이미지 예시](https://developer.mozilla.org/samples/cssref/border-collapse.html)
 
+---
+
 ## /* Box Model */
 
 ### 8. `box-sizing`을 border-box로 설정해 놓는 이유
@@ -187,7 +189,7 @@ table {
 	box-sizing: border-box;
 }
 ```
-`box-sizing`
+box-sizing
 : 기본 값은 `content-box`로 설정되어 있다. 이때 box의 너비는 `width = width of content`라고 할 수 있다.
 : 이를 `border-box`로 설정하면 너비가 `width = padding+border+width of content`로 바뀐다. (바깥 여백 margin은 포함하지 않는다.)
 : 박스모델의 요소의 너비와 높이를 자동 계산하는 것을 대체하는 속성이다.
@@ -204,6 +206,8 @@ CSS가 이 요소 각각을 표준 박스 모델(CSS Box-model)을 사용해 만
 *[[MDN] CSS-box-model image](https://developer.mozilla.org/ko/docs/Web/CSS/CSS_Box_Model/Introduction_to_the_CSS_box_model)*
 
 위의 8번 box-sizing 속성은 이 박스 모델을 바탕으로 width, height 값을 조정한다.
+
+---
 
 ## /* Type */
 
@@ -264,16 +268,20 @@ text-decoration: unset;
 ```
 * 참고: text-decoration-color, text-decoration-line, and text-decoration-style를 포함하게 되었다. 다른 축약형 속성들처럼, text-decoration이라는 축약형 속성 하나로 여러가지를 표현할 수 있다. 
 
----
+### 11. pre 태그
 
-<a name="rendering-engine"><sup>[1]</sup></a> 레이아웃 엔진(layout engine) 또는 렌더링 엔진(rendering engine)은 웹 콘텐츠(HTML, XML, 그림 파일 등)와 포맷 정보(CSS, XML 등)를 가져 와서 화면에 해당 콘텐츠를 정리하여 보여 주는 소프트웨어를 말한다. 이 프로그램은 모니터나 프린터에 표시할 창의 콘텐츠 영역을 그린다. 레이아웃 엔진은 웹 브라우저, 이메일 클라이언트와 같은 웹 콘텐츠를 보여 주거나 편집하는 데 쓰이는 응용 프로그램에 사용된다. [(출처)](https://ko.wikipedia.org/wiki/%EB%A0%88%EC%9D%B4%EC%95%84%EC%9B%83_%EC%97%94%EC%A7%84)
-
-<a name="responsive-web"><sup>[2]</sup></a>웹 서핑을 위한 휴대기기의 사용량이 엄청난 속도로 증가하고 있지만, 불행히도 상당수의 웹은 휴대기기에 최적화되어 있지 않습니다. 휴대기기는 대개 화면 크기가 제한되며, 콘텐츠가 화면에 배치되는 방식에 따라 다른 접근방식이 필요합니다.
-
-### 11. <pre> 태그
-
-```css
+```html
 <pre><code>function Panel(element, canClose, closeHandler) {  this.element = element;  this.canClose = canClose;  this.closeHandler = function () { if (closeHandler) closeHandler() };
 }</code></pre>
 ```
-<pre>: Preformatted Text 의 약자. 작성한 내용이 HTML 형태 그대로 유지된다. 따라서 <br>이나 <p> 태그를 사용하지 않아도 줄바꿈을 용이하게 할 수 있다. <textarea>에 넣은 값을 그대로 출력할 때, 코드를 그대로 보여줄 때도 쓸 수 있다.
+
+pre
+: Preformatted Text 의 약자. 작성한 내용이 HTML 형태 그대로 유지된다. 
+: 따라서 <br>이나 <p> 태그를 사용하지 않아도 줄바꿈을 용이하게 할 수 있다.
+: `<textarea>`에 넣은 값을 그대로 출력할 때, 코드를 그대로 보여줄 때도 쓸 수 있다.
+
+---
+
+<a name="rendering-engine"><sup>[1]</sup></a> '레이아웃 엔진(layout engine) 또는 렌더링 엔진(rendering engine)은 웹 콘텐츠(HTML, XML, 그림 파일 등)와 포맷 정보(CSS, XML 등)를 가져 와서 화면에 해당 콘텐츠를 정리하여 보여 주는 소프트웨어를 말한다. 이 프로그램은 모니터나 프린터에 표시할 창의 콘텐츠 영역을 그린다. 레이아웃 엔진은 웹 브라우저, 이메일 클라이언트와 같은 웹 콘텐츠를 보여 주거나 편집하는 데 쓰이는 응용 프로그램에 사용된다.' [(출처)](https://ko.wikipedia.org/wiki/%EB%A0%88%EC%9D%B4%EC%95%84%EC%9B%83_%EC%97%94%EC%A7%84)
+
+<a name="responsive-web"><sup>[2]</sup></a> '웹 서핑을 위한 휴대기기의 사용량이 엄청난 속도로 증가하고 있지만, 불행히도 상당수의 웹은 휴대기기에 최적화되어 있지 않습니다. 휴대기기는 대개 화면 크기가 제한되며, 콘텐츠가 화면에 배치되는 방식에 따라 다른 접근방식이 필요합니다.' [(출처)](https://developers.google.com/web/fundamentals/design-and-ui/responsive/?hl=ko)
