Update reference link about regex expressions

--- a/_posts/2017-06-01-algorithm10.md
+++ b/_posts/2017-06-01-algorithm10.md
@@ -103,3 +103,4 @@ function alpha_string46(s){
 * [match()](https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/String/match) - 정규식을 사용하여 일치하는 문자열을 검색하고 그 결과를 배열로 반환한다. [추가 참고 링크](https://msdn.microsoft.com/ko-kr/library/7df7sf4x(v=vs.94).aspx)
 
 * 정규식에서 `$`는 입력값의 마지막을 뜻한다. `^`는 맨 처음을 뜻한다.
+-> [참고: MDN 정규식](https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/%EC%A0%95%EA%B7%9C%EC%8B%9D)
