Modified wrong explanation about regex expression

--- a/_posts/2017-06-01-algorithm10.md
+++ b/_posts/2017-06-01-algorithm10.md
@@ -43,7 +43,7 @@ function alpha_string46(s){
 // 아래는 테스트로 출력해 보기 위한 코드입니다.
 console.log( alpha_string46("a234") );
 ```
-1. 정규식 사용 : 정규식에서 `^`를 붙이면 `not`의 의미를 지닌다.
+1. 정규식 사용 : 정규식에서 `^`를 붙이면 시작점의 의미를 지닌다.
 2. match() 메서드 : 정규식을 사용하여 일치하는 문자열을 검색하고 그 결과를 배열로 반환한다.
 
 ```javascript
