Update post set-up with thumbnail image

--- a/_posts/2017-06-03-algorithm11.md
+++ b/_posts/2017-06-03-algorithm11.md
@@ -8,6 +8,7 @@ tags:
   - tryhelloworld
   - match(/str/g)
   - Level 1
+image: ../../assets/images/emojis/match.png
 comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/120'
 ---
