Change image size

--- a/_posts/2017-06-03-algorithm11.md
+++ b/_posts/2017-06-03-algorithm11.md
@@ -12,7 +12,8 @@ image: ../../assets/images/emojis/match.png
 comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/120'
 ---
-![slot machine](../../assets/images/emojis/match.png){: .center-image}
+![slot machine](../../assets/images/emojis/match.png/800x640){: .center-image}
+
 ## [문제](http://tryhelloworld.co.kr/challenge_codes/96)
 
 numPY함수는 대문자와 소문자가 섞여있는 문자열 s를 매개변수로 입력받습니다.
