--- a/_posts/2017-06-04-algorithm12.md
+++ b/_posts/2017-06-04-algorithm12.md
@@ -13,7 +13,9 @@ comments: true
 share: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/120'
 ---
-![gcd](../../assets/images/emojis/gcd.png){: .center-image}
+![gcd](../../assets/images/emojis/gcd.png/800x400){: .center-image}
+![gcd](https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Least_common_multiple.svg/300px-Least_common_multiple.svg.png){: .center-image}
+
 ## [문제](http://tryhelloworld.co.kr/challenge_codes/12)
 
 두 수를 입력받아 두 수의 최대공약수와 최소공배수를 반환해주는 gcdlcm 함수를 완성해 보세요. 배열의 맨 앞에 최대공약수, 그 다음 최소공배수를 넣어 반환하면 됩니다. 예를 들어 gcdlcm(3,12) 가 입력되면, [3, 12]를 반환해주면 됩니다.
