--- a/_posts/2017-06-05-study_al_5.md
+++ b/_posts/2017-06-05-study_al_5.md
@@ -58,13 +58,9 @@ var insert = function(array, rightIndex, value) {
 };
 ```
 
-이전에 짜놨던 swap함수와 indexOfMinimum을 가지고 선택정렬을 만든다.
+이전에 짜놨던 swap함수와 indexOfMinimum을 가지고 선택정렬을 만든다. 
 
-```javascript
+// 이어서
 
-```
-* 
-
-* 참고 
-
+* 참고
 [선택정렬 - wiki](https://ko.wikipedia.org/wiki/%EC%84%A0%ED%83%9D_%EC%A0%95%EB%A0%AC)
