Modified attached image

--- a/_posts/2017-06-09-algorithm13.md
+++ b/_posts/2017-06-09-algorithm13.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 알고리즘 문제풀이 13 - 행렬의 덧셈
-description: "행렬 인덱스를 돌며 더하기"
+description: "행렬 인덱스를 돌며 새로운 행렬 만들어내기"
 tags:
   - javascript
   - algorithm
@@ -57,7 +57,7 @@ for(var i = 0; i<answer.length; i++) {
 
 * 결과 출력
 
-![gcd](../../assets/images/emojis/gcd.png)
+![gcd](../../assets/images/study/matrix.png)
 [참고](https://wayhome25.github.io/algorithm/2017/02/26/SumMatrix/)
 
 ## 2. 다른 사람들의 풀이
