--- a/_posts/2017-06-09-algorithm13.md
+++ b/_posts/2017-06-09-algorithm13.md
@@ -55,9 +55,9 @@ for(var i = 0; i<answer.length; i++) {
 }
 ```
 
-* 결과 출력
+* 과정 결과 찍어보기
 
-![gcd](../../assets/images/study/matrix.png)
+![matrix](../../assets/images/study/matrix.png)
 [참고](https://wayhome25.github.io/algorithm/2017/02/26/SumMatrix/)
 
 ## 2. 다른 사람들의 풀이
