--- a/_posts/2017-06-13-web1.md
+++ b/_posts/2017-06-13-web1.md
@@ -19,7 +19,11 @@ Web에 대한 기본 지식을 쌓기 위해 읽기 시작했습니다.
 
 매번 시간에 쫓겨 제대로 짚고 넘어가지 못했지만 좋은 책을 통해 중요하다고 생각한 부분, 약간 헷갈리거나 생소한 내용들을 블로그에 정리하려고 합니다. 본문 내용을 발췌하는 것을 기본으로, 중요한 내용이나 질문, 정리할 것들을 추가합니다.
 
-* 절판된 책을 유진님께서 보내주셔서 잘 읽어볼 수 있게 되었습니다. 정말 감사드려요. :)
+![bookimage](../../assets/images/study/webbook.jpg)
+
+* 절판된 책을 유진님께서 보내주셔서 잘 읽어볼 수 있게 되었습니다. 감사드려요. :)
+
+* [원서](http://www.cdjapan.co.jp/product/NEOBK-744913)
 
 ## 서문
 
