--- a/_posts/2017-06-13-web1.md
+++ b/_posts/2017-06-13-web1.md
@@ -21,7 +21,7 @@ Web에 대한 기본 지식을 쌓기 위해 읽기 시작했습니다.
 
 ![bookimage](../../assets/images/study/webbook.jpg)
 
-* 절판된 책을 유진님께서 보내주셔서 잘 읽어볼 수 있게 되었습니다. 감사드려요. :)
+* 절판된 책을 [@yuniverse06](https://twitter.com/yuniverse06)님께서 보내주셔서 잘 읽어볼 수 있게 되었습니다. 감사드려요. :)
 
 * [원서](http://www.cdjapan.co.jp/product/NEOBK-744913)
 
