Added thumbnail image

--- a/_posts/2017-06-14-algorithm16.md
+++ b/_posts/2017-06-14-algorithm16.md
@@ -9,7 +9,7 @@ tags:
   - minimum value
   - array
   - Level 2
-image:
+image: 'https://media.giphy.com/media/10bxTLrpJNS0PC/giphy.gif'
 comments: true
 share: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/120'
