--- a/_posts/2017-06-14-algorithm16.md
+++ b/_posts/2017-06-14-algorithm16.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 알고리즘 문제풀이 16 - 최솟값 만들기
-description: "스택을 잡아먹지 않는 피보나치 함수 만들기"
+description: "배열 내부 정렬해 최소값 연산하기"
 tags:
   - javascript
   - algorithm
