--- a/_posts/2017-06-13-web1.md
+++ b/_posts/2017-06-13-web1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Web | 01. 웹이란 무엇인가?
-description: "<웹 개발자를 위한 웹을 지탱하는 기술(야마모토 요헤이)> 서문 및 1장"
+description: "<웹 개발자를 위한 웹을 지탱하는 기술(야마모토 요헤이)> 서문 및 1부 웹 개론 chapter 01 웹이란 무엇인가?"
 tags:
   - 웹을 지탱하는 기술
   - web
