Add react image file and add on post

--- a/_posts/2017-06-23-react_doc_01.md
+++ b/_posts/2017-06-23-react_doc_01.md
@@ -2,15 +2,18 @@
 layout: post
 title: ReactDoc | Reading React documentation Quick Start - 1. React / JSX / Elements
 description: "React 공식 문서 읽기 01."
-image:
+image: ../../assets/images/react_love.svg
 tags:
   - react
   - react documentation
+  - JSX
+  - elements
+  - ReactDOM
 comments: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/126'
 ---
 
-<!--![image](../../assets/images/images.png)-->
+![image](../../assets/images/react_love.png){: .center-image}
 
 #### Summary
 
