modified syntax error

--- a/_posts/2017-06-23-react_doc_01.md
+++ b/_posts/2017-06-23-react_doc_01.md
@@ -2,7 +2,7 @@
 layout: post
 title: ReactDoc | Reading React documentation Quick Start - 1. React / JSX / Elements
 description: "React 공식 문서 읽기 01."
-image: ../../assets/images/react_love.svg
+image: ../../assets/images/react_love.png
 tags:
   - react
   - react documentation
