--- a/_posts/2017-07-29-web3.md
+++ b/_posts/2017-07-29-web3.md
@@ -8,7 +8,7 @@ tags:
   - 시멘틱 웹
   - Front-end
   - 프론트엔드
-# image: '../../assets/images/study/webbook.jpg'
+image: '../../assets/images/semantic_web.jpg'
 comments: true
 share: true
 # link: 'http://tryhelloworld.co.kr/challenge_codes/120'
