add thumbnail image

--- a/_posts/2017-08-11-SPA_trans.md
+++ b/_posts/2017-08-11-SPA_trans.md
@@ -7,7 +7,7 @@ tags:
   - Single Page Apps
   - Front-end
   - 프론트엔드
-# image: '../../assets/images/semantic_web.jpg'
+image: '../../assets/images/spa_structure.png'
 # comments: true
 share: true
 # link: 'http://singlepageappbook.com/goal.html'
